--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
     "react-scripts": "0.8.5"
   },
   "dependencies": {
+    "bootstrap": "3",
+    "font-awesome": "^4.7.0",
+    "moment": "^2.17.1",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-bootstrap": "^0.30.7",
+    "react-dom": "^15.4.2",
+    "react-fontawesome": "^1.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
